# ISP_pipeline

./: CMakeLists.txt  README.md  compile_run.sh
.VSCodeCounter/2024-02-20_17-25-16/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-02-27_22-08-48/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
config/: config.csv
lib/LibRaw/: Makefile  config.status  libraw.pc  libraw_r.pc  libtool
lib/LibRaw/lib/: libraw.la  libraw_r.la
lib/LibRaw/lib/.libs/: libraw.23.dylib  libraw.lai  libraw_r.23.dylib  libraw_r.lai
lib/LibRaw/samples/.deps/: bin_4channels-4channels.Po  bin_dcraw_emu-dcraw_emu.Po  bin_dcraw_half-dcraw_half.Po  bin_half_mt-half_mt.Po  bin_mem_image-mem_image_sample.Po  bin_multirender_test-multirender_test.Po  bin_postprocessing_benchmark-postprocessing_benchmark.Po  bin_raw_identify-raw-identify.Po  bin_rawtextdump-rawtextdump.Po  bin_simple_dcraw-simple_dcraw.Po  bin_unprocessed_raw-unprocessed_raw.Po
lib/LibRaw/src/.deps/: libraw_c_api.Plo  libraw_datastream.Plo
lib/LibRaw/src/decoders/.deps/: canon_600.Plo  crx.Plo  decoders_dcraw.Plo  decoders_libraw.Plo  decoders_libraw_dcrdefs.Plo  dng.Plo  fp_dng.Plo  fuji_compressed.Plo  generic.Plo  kodak_decoders.Plo  load_mfbacks.Plo  smal.Plo  unpack.Plo  unpack_thumb.Plo
src/: BayerDomain.cpp  BayerDomain.h  Config.cpp  Config.h  RGBDomain.cpp  RGBDomain.h  YUVDomain.cpp  YUVDomain.h  common.cpp  common.h  main.cpp  output.cpp  output.h  util.h
(+57 files in other folders)
